[metadata]
name = emojy
version = 0.2.0
description = Write Python, in emojis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusharsadhwani/emojy
author = Tushar Sadhwani, Rodrigo Girão Serrão
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    tokenize-rt>=4.1.0
python_requires = >=3.6
package_dir = =src

[options.packages.find]
where = ./src

[options.entry_points]
console_scripts =
    emojy=emojy:cli

[options.extras_require]
dev =
    black
    mypy
    pytest
